# ai-assistant

./: .coverage  .dockerignore  .env.docker  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.cached  Dockerfile.debug  Dockerfile.optimized  Dockerfile.wheels  Jenkinsfile  Jenkinsfile.crossplatform  Modelfile.q5_k_m  OFFLINE_DOCKER_GUIDE.md  README.Docker.md  README.md  README_FOLDER_STRUCTURE.md  accuracy_comparison.md  app.py  check_model_limits.py  config.py  configure_32k.sh  coverage.xml  docker-build.sh  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  download-wheels-docker.sh  download-wheels.sh  model_configs.py  model_profiles.py  ollama_accuracy.env  prompt_display_info.md  pyproject.toml  pytest.ini  quick_start.py  requirements-dev.txt  requirements-minimal.txt  requirements-optimized.txt  (+16 more)
app/: __init__.py  routes.py
docs/: CONTEXT_WINDOW_GUIDE.md  DOCKER_CACHING_EXPLAINED.md  EXTERNAL_ACCESS.md  PROJECT_DOCUMENTATION.md  README_structure.md  SPEED_OPTIMIZATION.md  WSL2_BRIDGE_MODE.md  WSL2_NETWORKING_FIX.md  database_management.md  database_options.md  setup_notes.md
src/: __init__.py
static/: email-test.html  sample-email.txt  style.css  style.css.backup
templates/: index.html
tests/: __init__.py  conftest.py  test_app.py  test_work_assistant.py
utilities/: check_memory.sh  check_port.py  check_wsl_network.sh  check_wsl_resources.sh  compare_models.py  diagnose_firewall.sh  enable_external_access.sh  model_comparison.py  optimize_mixtral.py  restart_wsl_64gb.ps1  setup_port_forward.ps1  show_access_urls.py  (+4 more)
(+96 files in other folders)
