# pyproject.toml
[tool.poetry]
name = "ai-assistant"
version = "0.1.0"
description = "Local AI assistant service"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
# ↓ Add your runtime deps here (I'll convert from your requirements.txt once you paste it)
# fastapi = "^0.115"
# uvicorn = {version="^0.30", extras=["standard"]}

[tool.poetry.group.dev.dependencies]
# Dev/test tools go here
# ruff = "^0.5"
# black = "^24.4"
# pytest = "^8.2"
# pytest-cov = "^5.0"
# mypy = "^1.10"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"