[project]
name = "ai-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Cody Peterson",email = "cody.c.peterson@proton.me"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.1,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "chromadb (>=1.0.16,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
